feat/fix: add query method and fix errors
